Fixing error with dos and correct chemical potential

--- a/notebooks/exploratory/4.0-twh-optimize-known-collisions.md
+++ b/notebooks/exploratory/4.0-twh-optimize-known-collisions.md
@@ -74,6 +74,9 @@ t = teV / AtomicUnits.energy
 d_ang = 0.18071 # angstroms
 d = d_ang * AtomicUnits.length**3
 
+# chemical potential
+cp = 0.3212
+
 # wavenumbers
 wavenum_list_data = [0.944863, 1.889726, 2.834589] # 1/angstrom
 
