--- a/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
+++ b/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
@@ -37,14 +37,10 @@ from scipy import optimize
 import matplotlib.pyplot as plt
 from functools import partial
 
-import emcee 
-from multiprocessing import Pool
-
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
 from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
-from src.inference.mcmc_inference import unique_hdf5_group
 from src.utilities import AtomicUnits, elec_loss_fn
 import src.inference.probability_models as prob
 
@@ -71,12 +67,15 @@ def collisionfreq(freq, params):
 datafile = "../../data/external/Al-1 _vwf.txt"
 # just copying from the data file
 # temperature
-teV = 1
+teV = 1 # [eV]
 t = teV / AtomicUnits.energy
 
 # density
 d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
+
+# chemical potential
+cp = 0.3212 # [at u]
 
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
@@ -87,19 +86,25 @@ dos_data = datadump[3]
 # function for true collision freq
 true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collfreq_data)
 # function for DOS ratio
-dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
+dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
+
+# electron data
+electrons = ElectronGas(t, d, dos_fn, cp)
+
+# dielectric function
+dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
 freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 100) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum = 0.7 / AtomicUnits.length # 1/[angstrom]
+wavenum = 1.55 # 1/[angstrom]
 ```
 
 ### Create ELF data with collision frequency data
 
 ```{code-cell} ipython3
-elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                        wavenum_val * AtomicUnits.length,
+elf_data = elec_loss_fn(dielectric,
+                        wavenum * AtomicUnits.length,
                         freq_data / AtomicUnits.energy,
                         true_collfreq_fn
                        )
@@ -121,8 +126,6 @@ plt.legend()
 using the Mermin dielectric function and the `collisionfreq` function
 
 ```{code-cell} ipython3
-dielectric = Mermin(ElectronGas(t, d, dos_fn))
-
 def elfmodel(freq, params):
     return elec_loss_fn(
         dielectric,
@@ -171,29 +174,21 @@ plt.legend()
 
 ```{code-cell} ipython3
 plt.semilogx(freq_data, elf_data, c="C3", label="Avg. Atom")
-opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                       wavenum_val * AtomicUnits.length,
-                       freq_data / AtomicUnits.energy,
-                       lambda x: collisionfreq(x, optresult.x)
-                      )
+# ELF with optimized collision frequency
+opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
-plt.ylim(1e-6) # resolution of data
 plt.legend()
 ```
 
 ```{code-cell} ipython3
 plt.loglog(freq_data, elf_data, c="C3", label="Avg. Atom")
-opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                       wavenum_val * AtomicUnits.length,
-                       freq_data / AtomicUnits.energy,
-                       lambda x: collisionfreq(x, optresult.x)
-                      )
+opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\omega$ [eV]")
-plt.ylim(1e-6) # resolution of data
+plt.ylim(1e-6)
 plt.legend()
 ```
 
