--- a/notebooks/exploratory/4.3-twh-optimize-two-wavenum-ELF.md
+++ b/notebooks/exploratory/4.3-twh-optimize-two-wavenum-ELF.md
@@ -38,16 +38,11 @@ import numpy as np
 rng = np.random.default_rng()
 from scipy import optimize
 import matplotlib.pyplot as plt
-from functools import partial
-
-import emcee 
-from multiprocessing import Pool
 
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
 from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
-from src.inference.mcmc_inference import unique_hdf5_group
 from src.utilities import AtomicUnits, elec_loss_fn
 import src.inference.probability_models as prob
 
@@ -80,6 +75,9 @@ t = teV / AtomicUnits.energy
 d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
+# chemical potential
+cp = 0.3212 # [at u]
+
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
@@ -89,7 +87,13 @@ dos_data = datadump[3]
 # function for true collision freq
 true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collfreq_data)
 # function for DOS ratio
-dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
+dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
+
+# electron data
+electrons = ElectronGas(t, d, dos_fn, cp)
+
+# dielectric function
+dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
 freq_data = np.geomspace(1e-1, 1e3, 100) # [eV]
@@ -101,7 +105,7 @@ wavenum = np.asarray([1.5, 4.39]) # 1/[angstrom]
 
 ```{code-cell} ipython3
 # true ELF data
-elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
+elf_data = elec_loss_fn(dielectric,
                         wavenum * AtomicUnits.length,
                         freq_data / AtomicUnits.energy,
                         true_collfreq_fn
@@ -150,8 +154,6 @@ plt.legend()
 ## Normalized ELF function
 
 ```{code-cell} ipython3
-dielectric = Mermin(ElectronGas(t, d, dos_fn))
-
 def normelfmodel(freq, params):
     elf = elec_loss_fn(
             dielectric,
