--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -56,6 +56,9 @@ t = teV / AtomicUnits.energy
 d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
+# chemical potential
+cp = 0.3212 # [at u]
+
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
@@ -65,7 +68,13 @@ dos_data = datadump[3]
 # function for Average Atom collision freq
 true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
 # function for DOS ratio
-dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
+dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
+
+# electron data
+electrons = ElectronGas(t, d, dos_fn, cp)
+
+# dielectric function
+dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
 freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
@@ -106,7 +115,7 @@ def elfmodel(freq, params):
 
 ```{code-cell} ipython3
 # true ELF data
-elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
+elf_data = elec_loss_fn(dielectric,
                         wavenum * AtomicUnits.length,
                         freq_data / AtomicUnits.energy,
                         true_collfreq_fn
@@ -160,11 +169,7 @@ plt.legend()
 
 ```{code-cell} ipython3
 plt.loglog(freq_data, elf_data, c="C3", label="Avg. Atom")
-opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                       wavenum * AtomicUnits.length,
-                       freq_data / AtomicUnits.energy,
-                       lambda x: collisionfreq(x, optresult.x)
-                      )
+opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
@@ -297,11 +302,12 @@ inds = rng.integers(len(flat_samples), size=100)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.loglog(freq_data, 
-               collisionfreq(freq_data / AtomicUnits.energy, sample), 
-               "C1", 
-                alpha=0.1
-              )
+    plt.loglog(
+        freq_data, 
+        collisionfreq(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
 
 # plot AA collision frequency
 plt.plot(freq_data,
@@ -324,19 +330,15 @@ plt.legend()
 This uses the same random samples from the above plot.
 
 ```{code-cell} ipython3
-eps = Mermin(ElectronGas(t, d, dos_fn))
 # plot ELF for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.semilogx(freq_data,
-                 elec_loss_fn(
-                     eps,
-                     wavenum * AtomicUnits.length,
-                     freq_data / AtomicUnits.energy,
-                     lambda x: collisionfreq(x, sample)
-                 ), 
-                 "C1", 
-                 alpha=0.1)
+    plt.semilogx(
+        freq_data,
+        elfmodel(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
 # plot data
 plt.loglog(freq_data, elf_data, c="k", label="Avg. Atom", lw=2, ls='--')
 
@@ -348,19 +350,15 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
-eps = Mermin(ElectronGas(t, d, dos_fn))
 # plot ELF for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.plot(freq_data,
-             elec_loss_fn(
-                 eps,
-                 wavenum * AtomicUnits.length,
-                 freq_data / AtomicUnits.energy,
-                 lambda x: collisionfreq(x, sample)
-             ), 
-             "C1", 
-             alpha=0.1)
+    plt.plot(
+        freq_data,
+        elfmodel(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
 # plot data
 plt.plot(freq_data, elf_data, c="k", label="Avg. Atom", lw=2, ls='--')
 
