--- a/notebooks/exploratory/5.15-twh-inference-model-data-absres.md
+++ b/notebooks/exploratory/5.15-twh-inference-model-data-absres.md
@@ -28,11 +28,9 @@ This notebook is roughly identical with `5.1-twh-....ipynb` except that we use t
 import numpy as np
 import matplotlib.pyplot as plt
 from scipy import optimize
-from functools import partial
 from datetime import datetime
 
 import emcee 
-from multiprocessing import Pool
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
@@ -53,10 +51,18 @@ datafile = "../../data/external/Al-1 _vwf.txt"
 # temperature
 teV = 1
 t = teV / AtomicUnits.energy
+datafile = "../../data/external/Al-1 _vwf.txt"
+# just copying from the data file
+# temperature
+teV = 1
+t = teV / AtomicUnits.energy
 
 # density
 d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
+
+# chemical potential
+cp = 0.3212 # [at u]
 
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
@@ -65,12 +71,46 @@ AA_collfreq_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
 # function for Average Atom collision freq
-AA_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
+true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
 # function for DOS ratio
-dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
+dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
+
+# electron data
+electrons = ElectronGas(t, d, dos_fn, cp)
+
+# dielectric function
+dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(1e-1, 1e3, 200) # [eV]
+freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
+# Wavenumber is independent of data -- can pick whatever we want to create our ELF data
+wavenum = 1.55 # 1/[angstrom]
+# density
+d_ang = 0.18071 # 1/[angstroms]**3
+d = d_ang * AtomicUnits.length**3
+
+# chemical potential
+cp = 0.3212 # [at u]
+
+datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
+orig_freq_data = datadump[0] # [eV]
+print(f"length of original data = {len(orig_freq_data)}")
+AA_collfreq_data = datadump[1] + 1j * datadump[2]
+dos_data = datadump[3]
+
+# function for Average Atom collision freq
+true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
+# function for DOS ratio
+dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
+
+# electron data
+electrons = ElectronGas(t, d, dos_fn, cp)
+
+# dielectric function
+dielectric = Mermin(electrons)
+
+# create a new, more regular frequency grid that what exists in the data file
+freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.55 # 1/[angstrom]
 ```
@@ -93,15 +133,13 @@ def collisionfreq(freq, params):
 using the Mermin dielectric function and the `collisionfreq` function
 
 ```{code-cell} ipython3
-dielectric = Mermin(ElectronGas(t, d, dos_fn))
-
 def elfmodel(freq, params):
     return elec_loss_fn(
         dielectric,
         wavenum * AtomicUnits.length,
         freq,
         lambda x: collisionfreq(x, params)
-        )
+    )
 ```
 
 ## Fit our collision frequency model to AA collision frequency data
@@ -323,20 +361,22 @@ inds = rng.integers(len(flat_samples), size=100)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.loglog(freq_data, 
-               collisionfreq(freq_data / AtomicUnits.energy, sample), 
-               "C1", 
-                alpha=0.1
-              )
+    plt.loglog(
+        freq_data, 
+        collisionfreq(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
 
 # plot true collision frequency
-plt.plot(freq_data,
-         collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll).real,
-         c="k",
-         label="true",
-         lw=2,
-         ls='--'
-        )
+plt.plot(
+    freq_data,
+    collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll).real,
+    c="k",
+    label="true",
+    lw=2,
+    ls='--'
+)
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
@@ -354,15 +394,12 @@ eps = Mermin(ElectronGas(t, d, dos_fn))
 # plot ELF for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.semilogx(freq_data,
-                 elec_loss_fn(
-                     eps,
-                     wavenum * AtomicUnits.length,
-                     freq_data / AtomicUnits.energy,
-                     lambda x: collisionfreq(x, sample)
-                 ), 
-                 "C1", 
-                 alpha=0.1)
+    plt.semilogx(
+        freq_data,
+        elfmodel(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
 # plot data
 plt.loglog(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
 
@@ -374,19 +411,16 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
-eps = Mermin(ElectronGas(t, d, dos_fn))
 # plot ELF for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.plot(freq_data,
-             elec_loss_fn(
-                 eps,
-                 wavenum * AtomicUnits.length,
-                 freq_data / AtomicUnits.energy,
-                 lambda x: collisionfreq(x, sample)
-             ), 
-             "C1", 
-             alpha=0.1)
+    plt.plot(
+        freq_data,
+        elfmodel(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
+    
 # plot data
 plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
 
