--- a/notebooks/exploratory/5.2-twh-inference-AAcollisions-absres.md
+++ b/notebooks/exploratory/5.2-twh-inference-AAcollisions-absres.md
@@ -28,11 +28,9 @@ So far, the analysis notebooks have examined inverting the ELF have used non-lin
 import numpy as np
 import matplotlib.pyplot as plt
 from scipy import optimize
-from functools import partial
 from datetime import datetime
 
 import emcee 
-from multiprocessing import Pool
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
@@ -45,7 +43,7 @@ import warnings
 warnings.filterwarnings('ignore')
 ```
 
-# Get the data
+# Get the average-atom data
 
 ```{code-cell} ipython3
 datafile = "../../data/external/Al-1 _vwf.txt"
@@ -58,21 +56,30 @@ t = teV / AtomicUnits.energy
 d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
+# chemical potential
+cp = 0.3212 # [at u]
+
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
-collfreq_data = datadump[1] + 1j * datadump[2]
+AA_collfreq_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
-# function for true collision frequency
-true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collfreq_data)
+# function for Average Atom collision freq
+true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
 # function for DOS ratio
-dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
+dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
+
+# electron data
+electrons = ElectronGas(t, d, dos_fn, cp)
+
+# dielectric function
+dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
 freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum = 1.5 # 1/[angstrom]
+wavenum = 1.55 # 1/[angstrom]
 ```
 
 # Define collision frequency model
@@ -93,26 +100,20 @@ def collisionfreq(freq, params):
 using the Mermin dielectric function and the `collisionfreq` function
 
 ```{code-cell} ipython3
-dielectric = Mermin(ElectronGas(t, d, dos_fn))
-
 def elfmodel(freq, params):
     return elec_loss_fn(
         dielectric,
         wavenum * AtomicUnits.length,
         freq,
         lambda x: collisionfreq(x, params)
-        )
+    )
 ```
 
 ### Create ELF data with collision freq data
 
 ```{code-cell} ipython3
 # true ELF data
-elf_data = elec_loss_fn(dielectric,
-                        wavenum * AtomicUnits.length,
-                        freq_data / AtomicUnits.energy,
-                        true_collfreq_fn
-                    )
+elf_data = elfmodel(freq_data / AtomicUnits.energy, true_collfreq_fn)
 print(f"shape of ELF data = {elf_data.shape}")
 ```
 
@@ -160,12 +161,7 @@ plt.legend()
 
 ```{code-cell} ipython3
 plt.loglog(freq_data, elf_data, c="C3", label="Avg. Atom")
-opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                       wavenum * AtomicUnits.length,
-                       freq_data / AtomicUnits.energy,
-                       lambda x: collisionfreq(x, optresult.x)
-                      )
-plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
+opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
 plt.ylim(1e-6) # resolution of data
@@ -243,69 +239,6 @@ backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
 flat_samples = flat_mcmc_samples(backend)
 ```
 
-```{code-cell} ipython3
-samplesfile = "../../data/mcmc/mcmc_AAdata"
-dataset = "mcmc samples - AA data - abs. residual - 4 params"
-```
-
-```{code-cell} ipython3
-import h5py
-from datetime import datetime
-
-runinfo = {
-    "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
-    "input data info" : f"""Data generated using Average Atom 
-         collisions [T-matrix cross sections, nonideal DOS, QOZ structure
-         factors, LB form, inelastic processes], from file {datafile}. Uses updated
-         Kramers-Kronig transform for imaginary part of collisoin freq.""",
-    "input data temperature [eV]" : teV,
-    "input data density [1/angstrom^3]" : d_ang,
-    "input data wavenumber [1/angstrom]" : wavenum,
-    "collision frequency model" : "collision_activate_decay, 4 parameter",
-    "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
-    "residual" : "absolute",
-    "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
-}
-
-# sampler properties
-ndim = 4 # number of parameters
-numchains = 32
-numsamples = 35_000
-```
-
-```{code-cell} ipython3
-# # avoid overwriting datasets
-# dataset = unique_hdf5_group(samplesfile, dataset)
-backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
-# backend.reset(numchains, ndim)
-
-# randomly initialize chains within the boundaries
-rng = np.random.default_rng()
-initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
-
-# perform ensemble MCMC sampling of logposterior
-with Pool() as pool:
-    sampler = emcee.EnsembleSampler(
-        numchains, ndim, logposterior, backend=backend, pool=pool
-    )
-    sampler.run_mcmc(None, numsamples, progress=True) # upwards of 1 1/2 hrs!!
-
-# add information to h5py file
-with h5py.File(samplesfile, "a") as f:
-    dset = f[dataset]
-    for k, v in runinfo.items():
-        dset.attrs[k] = v
-```
-
-```{code-cell} ipython3
-# # view attributes of dataset
-# with h5py.File(samplesfile, "a") as f:
-#     print(list(f.keys()))
-#     dset = f["mcmc_samples_AAdata"]
-#     for attr in dset.attrs:
-#         print(f"{attr} : {dset.attrs[attr]}")
-```
-
 # MCMC results
 
 ```{code-cell} ipython3
@@ -349,11 +282,12 @@ inds = rng.integers(len(flat_samples), size=100)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.loglog(freq_data, 
-               collisionfreq(freq_data / AtomicUnits.energy, sample), 
-               "C1", 
-                alpha=0.1
-              )
+    plt.loglog(
+        freq_data, 
+        collisionfreq(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
 
 # plot AA collision frequency
 plt.plot(freq_data,
@@ -376,15 +310,13 @@ eps = Mermin(ElectronGas(t, d, dos_fn))
 # plot ELF for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.semilogx(freq_data,
-                 elec_loss_fn(
-                     eps,
-                     wavenum * AtomicUnits.length,
-                     freq_data / AtomicUnits.energy,
-                     lambda x: collisionfreq(x, sample)
-                 ), 
-                 "C1", 
-                 alpha=0.1)
+    plt.semilogx(
+        freq_data,
+        elfmodel(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
+    
 # plot data
 plt.loglog(freq_data, elf_data, c="k", label="Avg. Atom", lw=2, ls='--')
 
@@ -396,19 +328,16 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
-eps = Mermin(ElectronGas(t, d, dos_fn))
 # plot ELF for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.plot(freq_data,
-             elec_loss_fn(
-                 eps,
-                 wavenum * AtomicUnits.length,
-                 freq_data / AtomicUnits.energy,
-                 lambda x: collisionfreq(x, sample)
-             ), 
-             "C1", 
-             alpha=0.1)
+    plt.plot(
+        freq_data,
+        elfmodel(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
+    
 # plot data
 plt.plot(freq_data, elf_data, c="k", label="Avg. Atom", lw=2, ls='--')
 
