--- a/notebooks/exploratory/5.3-twh-inference-reducedrange-model-data.md
+++ b/notebooks/exploratory/5.3-twh-inference-reducedrange-model-data.md
@@ -56,6 +56,9 @@ t = teV / AtomicUnits.energy
 d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
+# chemical potential
+cp = 0.3212 # [at u]
+
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
@@ -65,7 +68,13 @@ dos_data = datadump[3]
 # function for Average Atom collision freq
 AA_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
 # function for DOS ratio
-dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
+dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
+
+# electron data
+electrons = ElectronGas(t, d, dos_fn, cp)
+
+# dielectric function
+dielectric = Mermin(electrons)
 
 # create a new, truncated frequency grid
 freq_data = np.linspace(2, 45, 99) # [eV]
@@ -91,15 +100,13 @@ def collisionfreq(freq, params):
 using the Mermin dielectric function and the `collisionfreq` function
 
 ```{code-cell} ipython3
-dielectric = Mermin(ElectronGas(t, d, dos_fn))
-
 def elfmodel(freq, params):
     return elec_loss_fn(
         dielectric,
         wavenum * AtomicUnits.length,
         freq,
         lambda x: collisionfreq(x, params)
-        )
+    )
 ```
 
 ## Fit our collision frequency model to AA collision frequency data
@@ -301,11 +308,12 @@ inds = rng.integers(len(flat_samples), size=100)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.plot(freq_data, 
-               collisionfreq(freq_data / AtomicUnits.energy, sample), 
-               "C1", 
-                alpha=0.1
-              )
+    plt.plot(
+        freq_data, 
+        collisionfreq(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
 
 # plot true collision frequency
 plt.plot(freq_data,
@@ -363,15 +371,12 @@ eps = Mermin(ElectronGas(t, d, dos_fn))
 # plot ELF for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.plot(freq_data,
-             elec_loss_fn(
-                 eps,
-                 wavenum * AtomicUnits.length,
-                 freq_data / AtomicUnits.energy,
-                 lambda x: collisionfreq(x, sample)
-             ), 
-             "C1", 
-             alpha=0.1)
+    plt.plot(
+        freq_data,
+        elfmodel(freq_data / AtomicUnits.energy, sample), 
+        "C1", 
+        alpha=0.1
+    )
 # plot data
 plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
 
