--- a/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
+++ b/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
@@ -36,14 +36,11 @@ from scipy import optimize
 import matplotlib.pyplot as plt
 from functools import partial
 
-import emcee 
-from multiprocessing import Pool
 
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
 from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
-from src.inference.mcmc_inference import unique_hdf5_group
 from src.utilities import AtomicUnits, elec_loss_fn
 
 import warnings
@@ -63,6 +60,9 @@ t = teV / AtomicUnits.energy
 d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
+# chemical potential
+cp = 0.3212 # [at u]
+
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
@@ -72,12 +72,18 @@ dos_data = datadump[3]
 # function for true collision freq
 true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collfreq_data)
 # function for DOS ratio
-dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
+dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
+
+# electron data
+electrons = ElectronGas(t, d, dos_fn, cp)
+
+# dielectric function
+dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
 freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 100) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
+wavenum = 1.55 # 1/[angstrom]
 ```
 
 ### Create ELF data with collision frequency data, and an noisy ELF data set
@@ -86,8 +92,8 @@ We will also trim down the number of data points.
 
 ```{code-cell} ipython3
 # true ELF data
-elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                        wavenum_val * AtomicUnits.length,
+elf_data = elec_loss_fn(dielectric,
+                        wavenum * AtomicUnits.length,
                         freq_data / AtomicUnits.energy,
                         true_collfreq_fn
                        )
@@ -345,8 +351,8 @@ initparams = (1, 1, 1, 1)
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                elf_data,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum_val * AtomicUnits.length,
+               dielectric,
+               wavenum * AtomicUnits.length,
                collisionfreq,
                initparams,
                true_collfreq_fn(freq_data / AtomicUnits.energy),
@@ -359,8 +365,8 @@ opt = analysis(freq_data / AtomicUnits.energy,
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                elf_data,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum_val * AtomicUnits.length,
+               dielectric,
+               wavenum * AtomicUnits.length,
                collisionfreq,
                initparams,
                true_collfreq_fn(freq_data / AtomicUnits.energy),
@@ -373,8 +379,8 @@ opt = analysis(freq_data / AtomicUnits.energy,
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                elf_data_noise,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum_val * AtomicUnits.length,
+               dielectric,
+               wavenum * AtomicUnits.length,
                collisionfreq,
                initparams,
                true_collfreq_fn(freq_data / AtomicUnits.energy),
@@ -390,8 +396,8 @@ tails which have a lower signal to noise ratio)
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                elf_data_noise,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum_val * AtomicUnits.length,
+               dielectric,
+               wavenum * AtomicUnits.length,
                collisionfreq,
                initparams,
                true_collfreq_fn(freq_data / AtomicUnits.energy),
@@ -404,8 +410,8 @@ opt = analysis(freq_data / AtomicUnits.energy,
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                elf_data_noise,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum_val * AtomicUnits.length,
+               dielectric,
+               wavenum * AtomicUnits.length,
                collisionfreq,
                initparams,
                true_collfreq_fn(freq_data / AtomicUnits.energy),
@@ -418,8 +424,8 @@ opt = analysis(freq_data / AtomicUnits.energy,
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                elf_data_noise,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum_val * AtomicUnits.length,
+               dielectric,
+               wavenum * AtomicUnits.length,
                collisionfreq,
                initparams,
                true_collfreq_fn(freq_data / AtomicUnits.energy),
